--- a/client/src/assets/styles/navbar.css
+++ b/client/src/assets/styles/navbar.css
@@ -10,6 +10,7 @@
   min-height: 10svh;
   padding: 1rem;
   display: flex;
+  z-index: 100;
 }
 
 .navbar_logo img {
@@ -79,6 +80,7 @@
     position: fixed;
     top: 2.5rem;
     right: 1.5rem;
+    z-index: 110;
   }
 
   .navbar_burger:hover {
