--- a/client/src/assets/styles/progressbar.css
+++ b/client/src/assets/styles/progressbar.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   gap: 0.5rem;
   width: 100%;
+  z-index: 10;
 }
 
 .progress_bar_container {
